--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cw-egg-boilerplate-simple",
     "version": "1.0.0",
-    "description": "",
+    "description": "boilerplate for cw egg quickstart",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
